--- a/config.json
+++ b/config.json
@@ -1,11 +1,11 @@
 {
     "user": {
-        "id": "ffx.prefix()",
-        "name": "fake.name()",
-        "sis_id": "ffx.noprefix()",
-        "sis_name": "ffx.noprefix()",
-        "course_id": "ffx.prefix()",
-        "current_grade": "ffx.noprefix()",
-        "final_grade": "ffx.noprefix()"
+        "id": "ffx.prefix",
+        "name": "faker.name",
+        "sis_id": "ffx.encrypt",
+        "sis_name": "ffx.encrypt",
+        "course_id": "ffx.prefix",
+        "current_grade": "ffx.noprefix",
+        "final_grade": "ffx.noprefix"
     }
 }
