UDW isn't a prefix but instead is an addition

--- a/.env.sample
+++ b/.env.sample
@@ -5,7 +5,7 @@ MYSQL_PASSWORD=student_dashboard_pw
 MYSQL_HOST=127.0.0.1
 MYSQL_PORT=5306
 
-# This is a special prefix that we want to preserve for now
-UDW_ID_PREFIX=
+# This is a special addition that we want to preserve for now for MyLA compat
+ID_ADDITION=10000000000000000
 #Secret Key for encrypting the data
 FFX_SECRET=secret_key
