Adding an env parameter to update the database

--- a/.env.sample
+++ b/.env.sample
@@ -10,3 +10,6 @@ ID_ADDITION=10000000000000000
 #Secret Key for encrypting the data
 FFX_SECRET=secret_key
 FAKER_SEED_LENGTH=8
+
+# Whether or not to update the database (Dry Run if this is false)
+UPDATE_DATABASE=False
