--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-# Look at libffx
-pyffx>=0.2.0,<0.2.99
-
-pandas>=0.23,<0.23.99
-SQLAlchemy>=1.2.7,<1.2.99
-mysqlclient>=1.3.13,<1.3.99
+Autologging==1.2.0
+Faker==1.0.1
+pandas==0.23.4
+python_decouple==3.1
+pyffx==0.2.0
+numpy==1.14.6
+SQLAlchemy==1.2.12
+python_dateutil==2.8.0
+python-dotenv==0.10.1
