--- a/config.json
+++ b/config.json
@@ -27,14 +27,14 @@
         "sis_id": "ffx.encrypt",
         "sis_name": "faker.user_name",
         "course_id": "ffx.encrypt",
-        "current_grade": "ffx.encrypt",
-        "final_grade": "ffx.encrypt"
+        "current_grade": "redist.course_id",
+        "final_grade": "redist.course_id"
     },
     "assignment_groups": {
         "id": "ffx.encrypt",
         "name": "faker.assignment",
-        "weight": "ffx.encrypt",
-        "group_points": "ffx.encrypt", 
+        "weight": "redist.course_id",
+        "group_points": "redist.course_id", 
         "course_id": "ffx.encrypt",
         "drop_lowest": "None",
         "drop_highest": "None"
@@ -44,7 +44,7 @@
         "name": "faker.assignment",
         "due_date": "faker.date_time_on_date",
         "local_date": "faker.date_time_on_date",
-        "points_possible": "ffx.encrypt",
+        "points_possible": "redist.course_id",
         "course_id": "ffx.encrypt",
         "assignment_group_id": "ffx.encrypt"
     },
@@ -55,7 +55,7 @@
         "user_id": "ffx.encrypt",
         "score": "ffx.encrypt",
         "graded_date": "faker.date_time_on_date",
-        "avg_score": "ffx.encrypt"
+        "avg_score": "redist.course_id"
     },
     "assignment_weight_consideration": {
         "course_id": "ffx.encrypt",
