--- a/.env.sample
+++ b/.env.sample
@@ -8,8 +8,8 @@ MYSQL_PORT=5306
 # This is a special addition that we want to preserve for now for MyLA compat
 ID_ADDITION=10000000000000000
 #Secret Key for encrypting the data
-FFX_SECRET=secret_key
-FAKER_SEED_LENGTH=8
+FFX_SECRET=secretkeysecretkey
+FAKER_SEED_LENGTH=16
 
 # Whether or not to update the database (Dry Run if this is false)
 UPDATE_DATABASE=False
