Fixes #33 for empty lists to resample
Also allows getting the tables to be processed from env for testing

--- a/.env.sample
+++ b/.env.sample
@@ -11,5 +11,8 @@ ID_ADDITION=10000000000000000
 FFX_SECRET=secretkeysecretkey
 FAKER_SEED_LENGTH=16
 
+#If this is empty process all tables, otherwise specify tables to run
+TABLES=
+
 # Whether or not to update the database (Dry Run if this is false)
 UPDATE_DATABASE=False
