Add support for disabling foreign key checks

--- a/.env.sample
+++ b/.env.sample
@@ -16,3 +16,6 @@ TABLES=
 
 # Whether or not to update the database (Dry Run if this is false)
 UPDATE_DATABASE=False
+
+# You'll usually have to disable foreign key checks to run this, so might need to set this to true
+DISABLE_FOREIGN_KEYS=True
