Code to split the dataframe back out and write out the appropriate tables

--- a/.env.sample
+++ b/.env.sample
@@ -12,6 +12,7 @@ FFX_SECRET=secretkeysecretkey
 FAKER_SEED_LENGTH=16
 
 #If this is empty process all tables, otherwise specify tables to run
+#For testing or redoing "joined" tables you should use the top level join name
 TABLES=
 
 # Whether or not to update the database (Dry Run if this is false)
